<resources>
    <string name="app_name">Economi</string>
    <string name="action_settings">Settings</string>
    <string name="income_big">INCOMES</string>
    <string name="expense_big">EXPENSES</string>
    <string name="charts_big">CHARTS</string>
    <string name="summary_big">SUMMARY</string>
    <string name="new_income">New income</string>
    <string name="new_expense">New expense</string>
    <string name="scan_receipt">Scan receipt</string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="save">Save</string>

    <string name="hello_world">Hello world!</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string-array name="categories">
        <item>Food</item>
        <item>Travel</item>
        <item>Living</item>
        <item>Spare time</item>
        <item>Others</item>
    </string-array>
    <string name="title_activity_start">StartActivity</string>
    <string name="new_user">New User</string>
    <string name="expenses_by_category">Expenses by category</string>
    <string name="incomes_by_category">Incomes by category</string>
    <string name="income">Your total income:</string>
    <string name="expense">Your total expense:</string>
    <string name="total">Total:</string>
    <string name="show_all">Show all</string>
    <string name="show_week">Show one week ago</string>
    <string name="show_month">Show one month ago</string>
    <string name="scan_format">Scan format</string>
    <string name="scan_content">Scan content</string>
    <string name="title">Title</string>
    <string name="amount">Amount</string>
    <string name="category">Category</string>
    <string name="date">Date</string>

</resources>
